feat(it): Introduce objection crushing section
Adds a new interactive section to the IT page that addresses common objections regarding marketing automation. This includes a new React component `ObjectionCrusher` and updated translations for English and Spanish `it.json` and `testimonials.json` to support the new content and provide more concrete examples and updated value propositions.

--- a/public/locales/ar/it.json
+++ b/public/locales/ar/it.json
@@ -1,25 +1,36 @@
 {
-    "hero.it.subtitle": "أنظمة أتمتة ذكية لزيادة نجاح إعلاناتك بمقدار 10 أضعاف.",
-    "it.title": "نظام الأتمتة الذكي",
-    "it.subtitle": "أتمتة رحلة عميلك وقم بالبيع بذكاء.",
-    "it.hero.badge": "بداية مجانية متاحة",
-    "it.hero.cta": "مشاهدة المنتجات",
-    "it.features.noTech": "لا حاجة لمعرفة تقنية",
-    "it.features.support": "دعم 24/7",
-    "it.features.roi": "ضمان عائد الاستثمار",
-    "it.stats.success": "نجاح الإعلان",
-    "it.stats.sales": "زيادة المبيعات",
-    "it.stats.efficiency": "كفاءة النظام",
-    "it.stats.uptime": "أتمتة كاملة",
-    "it.why.title": "لماذا تختار نظامنا؟",
-    "it.why.subtitle": "حل شامل لزيادة الكفاءة والنمو المستدام.",
-    "it.why.speed.title": "سرعة عالية",
-    "it.why.speed.desc": "أتمتة كاملة للعمليات، توفر 75٪ من الوقت وتزيد من سرعة الاستجابة للعملاء.",
-    "it.why.security.title": "أمان كامل",
-    "it.why.security.desc": "حماية البيانات بأعلى معايير الأمان، والتشفير المتقدم، والنسخ الاحتياطي المستمر.",
-    "it.why.growth.title": "نمو قابل للقياس",
-    "it.why.growth.desc": "تقارير دقيقة وتحليلات بيانات لاتخاذ قرارات أفضل ونمو مستمر.",
-    "it.products.title": "المنتجات والخدمات",
+    "it.title": "أتمتة التسويق. حافظ على فريقك.",
+    "it.subtitle": "بدون برمجة. إعداد في 48 ساعة. عائد استثمار مضمون أو استرد أموالك.",
+    "it.hero.badge": "لا فقدان للوظائف. فقط نتائج 10 أضعاف.",
+    "it.hero.cta": "احصل على استشارة استراتيجية مجانية",
+    "it.hero.cta_secondary": "شاهد نتائج حقيقية",
+    "it.hero.trustline": "يستخدمه أكثر من 500 شركة صغيرة ومتوسطة · متوافق مع GDPR · دعم بشري 24/7",
+    "it.stats.success": "↑ 312% مبيعات (تجارة إلكترونية، إيطاليا)",
+    "it.stats.sales": "↑ 8.7x عائد على الإنفاق الإعلاني (خدمة محلية)",
+    "it.stats.efficiency": "↓ 73% هدر إعلاني (عميل وكالة)",
+    "it.stats.uptime": "تشغيل 100% · دعم 4.9/5",
+
+    "it.objections.title": "أسئلتك، إجابات صريحة",
+    "it.objections.tab1.title": "هل سيحل الذكاء الاصطناعي محل فريقي؟",
+    "it.objections.tab1.content": "لا. بل يحررهم. يوفر نظامنا 75% من وقتهم في المهام المتكررة، حتى يتمكنوا من التركيز على الاستراتيجية والإبداع والتفاعلات عالية القيمة مع العملاء.",
+    "it.objections.tab2.title": "هل بياناتي آمنة؟",
+    "it.objections.tab2.content": "بالتأكيد. نستخدم تشفيرًا على مستوى البنوك، ونقوم بنسخ احتياطي يومي، ونلتزم تمامًا باللائحة العامة لحماية البيانات (GDPR)، ولا نشارك بياناتك أبدًا مع أطراف ثالثة.",
+    "it.objections.tab3.title": "ماذا لو لم ينجح الأمر؟",
+    "it.objections.tab3.content": "نقدم ضمانًا كاملاً لعائد الاستثمار. إذا لم ترَ نتائج قابلة للقياس في أول 30 يومًا، فستسترد أموالك بالكامل. بدون طرح أي أسئلة. نجاحك هو نجاحنا.",
+    "it.objections.tab4.title": "هل أحتاج إلى مهارات تقنية؟",
+    "it.objections.tab4.content": "صفر. الواجهة بسيطة بالسحب والإفلات. بالإضافة إلى ذلك، يتولى فريق الخبراء لدينا الإعداد الكامل لك في أقل من 48 ساعة. كل ما عليك هو مشاهدة النتائج.",
+
+    "it.why.title": "لماذا ستنام بشكل أفضل ليلاً",
+    "it.why.subtitle": "حل شامل لراحة البال والنمو المستدام.",
+    "it.why.speed.title": "استعد أمسياتك",
+    "it.why.speed.desc": "تعمل الأتمتة لدينا على مدار الساعة طوال أيام الأسبوع، حيث تجذب العملاء المحتملين وترعاهم أثناء عدم اتصالك بالإنترنت. ركز على عملك، وليس فيه.",
+    "it.why.security.title": "احمِ سمعتك",
+    "it.why.security.desc": "بيانات عملائك مؤمنة بتشفير على مستوى البنوك ونسخ احتياطي يومي. لا تقلق أبدًا بشأن خرق البيانات مرة أخرى.",
+    "it.why.growth.title": "ضع حدًا للتخمين",
+    "it.why.growth.desc": "تُظهر لك لوحة التحكم التحليلية الخاصة بنا ما ينجح وما لا ينجح بالضبط. اتخذ قرارات تعتمد على البيانات واستثمر ميزانيتك بثقة.",
+    "it.why.guarantee": "صممه فرزين طهيوري - أكثر من 20 عامًا في تنمية العلامات التجارية. أراهن باسمي على نجاحك.",
+
+    "it.products.title": "حزمة الأتمتة المخصصة لك",
     "it.products.subtitle": "حلول أتمتة شاملة لكل مرحلة من مراحل رحلة العميل.",
     "it.prod.acquisition.title": "أتمتة الاستحواذ",
     "it.prod.acquisition.desc": "جذب عملاء مستهدفين تلقائيًا بحملات ذكية وزيادة معدل التحويل حتى 5 أضعاف.",
@@ -36,36 +47,34 @@
     "it.prod.strategy.badge": "خاص للشركات",
     "it.prod.strategy.title": "استراتيجية الإعلان",
     "it.prod.strategy.desc": "تصميم وتنفيذ وتحسين استراتيجيات الإعلان بالذكاء الاصطناعي للحصول على أفضل النتائج. يشمل تحليل السوق.",
-    "it.process.title": "كيف يعمل؟",
-    "it.process.subtitle": "فقط 3 خطوات لإكمال أتمتة عملك.",
-    "it.process.step1.title": "استشارة مجانية",
-    "it.process.step1.desc": "يقوم فريقنا بمراجعة احتياجات عملك واقتراح الحل الأفضل.",
-    "it.process.step2.title": "إعداد سريع",
-    "it.process.step2.desc": "نظام الأتمتة الخاص بك جاهز ويعمل في أقل من 48 ساعة.",
-    "it.process.step3.title": "نمو مستمر",
-    "it.process.step3.desc": "شاهد النتائج من اليوم الأول وحقق نموًا مستدامًا مع التحسين المستمر.",
-    "it.form.title": "جاهز لنمو 10 أضعاف؟",
-    "it.form.subtitle": "احصل على استشارة مجانية الآن وابدأ رحلة التحول الرقمي.",
+
+    "it.process.title": "طريقك المكون من 3 خطوات للنمو دون عناء",
+    "it.process.subtitle": "أطلق نظامك الآلي في 48 ساعة فقط.",
+    "it.process.step1.title": "مكالمة استراتيجية مجانية",
+    "it.process.step1.desc": "في مكالمة مدتها 30 دقيقة، نرسم مسار مبيعاتك الحالي ونحدد فرص الأتمتة الرئيسية. بدون بطاقة ائتمان، بدون التزام.",
+    "it.process.step2.title": "إعداد الذكاء الاصطناعي في 48 ساعة",
+    "it.process.step2.desc": "يقوم فريقنا ببناء ودمج نظام الأتمتة المخصص لك. لا يتطلب أي عمل تقني من جانبك.",
+    "it.process.step3.title": "لوحة تحكم بالنتائج الحية",
+    "it.process.step3.desc": "منذ اليوم الأول، يمكنك الوصول إلى لوحة تحكم مباشرة لتتبع العملاء المحتملين والمبيعات وعائد الاستثمار في الوقت الفعلي.",
+
+    "it.form.title": "احصل على خطة النمو المجانية الخاصة بك",
+    "it.form.subtitle": "لا التزام. لا عرض بيع. مجرد خطة واضحة وقابلة للتنفيذ لمضاعفة نتائجك 10 مرات.",
     "it.form.name": "الاسم الكامل",
-    "it.form.phone": "رقم الهاتف",
+    "it.form.phone": "رقم الهاتف (اختياري)",
+    "it.form.challenge": "ما هو أكبر تحدٍ تواجهه الآن؟",
     "it.form.email": "البريد الإلكتروني",
     "it.form.product": "اختر المنتج",
     "it.form.message": "رسالتك (اختياري)",
-    "it.form.submit": "احصل على استشارة مجانية",
-    "it.form.disclaimer": "بإرسال هذا النموذج، فإنك توافق على الشروط والأحكام الخاصة بنا.",
-    "it.ai.title": "الذكاء الاصطناعي والأتمتة",
-    "it.ai.desc": "نقوم بتنفيذ وكلاء أذكياء وأتمتة سير العمل لتبسيط عملياتك وزيادة الكفاءة.",
-    "it.automation.title": "التحول الرقمي",
-    "it.automation.desc": "حلول رقمية شاملة بما في ذلك تطوير البرمجيات لتحديث البنية التحتية لأعمالك.",
-    "it.marketing.title": "التسويق الرقمي",
-    "it.marketing.desc": "استراتيجيات تسويق قائمة على البيانات مصممة لتوسيع نطاق وصولك وإشراك جمهورك المستهدف بفعالية.",
+    "it.form.submit": "أرسل لي الخطة",
+    "it.form.disclaimer": "✅ لا رسائل مزعجة · متوافق مع GDPR · أكثر من 500 عميل سعيد",
+    
     "it.lead.sectionTitle": "تعرف على رئيس قسم تكنولوجيا المعلومات والذكاء الاصطناعي",
     "it.lead.name": "فرزين طهيوري",
     "it.lead.title": "استراتيجي، مُنشئ أنظمة، ومستشار نمو الأعمال",
     "it.lead.website.url": "https://tahayori.com",
     "it.lead.website.text": "tahayori.com",
     "it.lead.summaryTitle": "ملخص احترافي",
-    "it.lead.summary": "شخص لديه أكثر من 20 عامًا من الخبرة في مجالات البرمجة وتصميم النظم والأتمتة الذكية والتسويق الرقمي. لديه سجل حافل بالتعاون مع شركات وعلامات تجارية متنوعة في تصميم الويب، وتنظيم أنظمة المبيعات، والاستشارات الاستراتيجية، وتطوير أتمتة الذكاء الاصطناعي. يجمع بين التفكير التحليلي والإبداع التقني والبصيرة الاقتصادية في تصميم حلول قابلة للتطوير ومربحة.",
+    "it.lead.summary": "بخبرة تزيد عن 20 عامًا، كان فرزين هو مهندس قسم التكنولوجيا في مجموعة بزرگی منذ عام 2009. يجمع بين التفكير التحليلي والإبداع التقني والبصيرة الاقتصادية في تصميم حلول قابلة للتطوير ومربحة لعملائنا.",
     "it.lead.skillsTitle": "التخصصات والمهارات",
     "it.lead.skills.group1.title": "البرمجة وتطوير النظم",
     "it.lead.skills.group2.title": "تصميم الويب وتجربة المستخدم/واجهة المستخدم",
