--- a/public/locales/ar/testimonials.json
+++ b/public/locales/ar/testimonials.json
@@ -14,11 +14,11 @@
     "testimonials.property.role2": "مدير مكتب عائلي، لندن",
     "testimonials.property.quote3": "كمستثمر أجنبي، كانت تقاريرهم الأسبوعية عن المشروع وإدارتهم الدقيقة لا تقدر بثمن. كانت تجربة استثمارية ناجحة دون أي تدخل مني.",
     "testimonials.property.role3": "رائد أعمال تقني، سنغافورة",
-    "testimonials.it.subtitle": "ما تقوله الشركات الناجحة عن الأتمتة لدينا.",
-    "testimonials.it.quote1": "باستخدام هذا النظام، تضاعفت مبيعاتنا ثلاث مرات وانخفض الوقت المستغرق لمتابعة العملاء إلى الربع. مذهل حقًا!",
-    "testimonials.it.role1": "رضا محمدي، الرئيس التنفيذي لمتجر إلكتروني",
-    "testimonials.it.quote2": "سمحت لنا أتمتة الإعلانات بإدارة ميزانيتنا الإعلانية بشكل أفضل وزاد معدل التحويل لدينا 10 أضعاف. موصى به للغاية!",
-    "testimonials.it.role2": "سارة أحمدي، مديرة التسويق",
-    "testimonials.it.quote3": "لديهم فريق دعم رائع. النظام سهل الاستخدام للغاية ولا يحتاج إلى معرفة متخصصة. ممتاز!",
-    "testimonials.it.role3": "مهدي كريمي، صاحب شركة ناشئة"
+    "testimonials.it.subtitle": "شهادات من أصحاب الأعمال الذين توقفوا عن التخمين وبدأوا في النمو.",
+    "testimonials.it.quote1": "أسفرت أتمتة مسار المبيعات عن زيادة بنسبة 312٪ في الطلبات عبر الإنترنت خلال الشهر الأول. يركز فريقنا الآن على الاستراتيجية، وليس المتابعة اليدوية.",
+    "testimonials.it.role1": "رضا م.، الرئيس التنفيذي لمتجر إلكتروني",
+    "testimonials.it.quote2": "كنا نهدر 70٪ من ميزانيتنا الإعلانية. منحنا تحسين الإعلانات بالذكاء الاصطناعي عائدًا على الإنفاق الإعلاني يبلغ 8.7 ضعفًا في ثلاثة أسابيع فقط. إنه يغير قواعد اللعبة.",
+    "testimonials.it.role2": "سارة أ.، مديرة التسويق",
+    "testimonials.it.quote3": "كان الإعداد في 48 ساعة حقيقيًا. كنا نعمل ونرى عملاء محتملين جدد على لوحة التحكم بحلول اليوم الثاني. والجزء الأفضل؟ لم أحتج إلى لمس سطر واحد من التعليمات البرمجية.",
+    "testimonials.it.role3": "مهدي ك.، مؤسس شركة ناشئة"
 }
