--- a/public/locales/en/it.json
+++ b/public/locales/en/it.json
@@ -1,25 +1,36 @@
 {
-    "hero.it.subtitle": "Intelligent Automation Systems to 10x Your Advertising Success.",
-    "it.title": "Intelligent Automation System",
-    "it.subtitle": "Automate your customer journey and sell intelligently.",
-    "it.hero.badge": "Free Start Available",
-    "it.hero.cta": "View Products",
-    "it.features.noTech": "No technical knowledge needed",
-    "it.features.support": "24/7 Support",
-    "it.features.roi": "ROI Guarantee",
-    "it.stats.success": "Ad Success",
-    "it.stats.sales": "Sales Increase",
-    "it.stats.efficiency": "System Efficiency",
-    "it.stats.uptime": "Full Automation",
-    "it.why.title": "Why Choose Our System?",
-    "it.why.subtitle": "A comprehensive solution for increasing efficiency and sustainable growth.",
-    "it.why.speed.title": "High Speed",
-    "it.why.speed.desc": "Complete process automation, saving 75% of time and increasing customer response speed.",
-    "it.why.security.title": "Complete Security",
-    "it.why.security.desc": "Data protection with the highest security standards, advanced encryption, and continuous backups.",
-    "it.why.growth.title": "Measurable Growth",
-    "it.why.growth.desc": "Detailed reports and data analytics for better decision-making and continuous growth.",
-    "it.products.title": "Products & Services",
+    "it.title": "Automate Marketing. Keep Your Team.",
+    "it.subtitle": "No coding. 48-hour setup. ROI guaranteed or your money back.",
+    "it.hero.badge": "No Jobs Lost. Just 10x Results.",
+    "it.hero.cta": "Get Free Strategy Call",
+    "it.hero.cta_secondary": "See Real Results",
+    "it.hero.trustline": "Used by 500+ SMBs · GDPR Compliant · 24/7 Human Support",
+    "it.stats.success": "↑ 312% Sales (eCom, Italy)",
+    "it.stats.sales": "↑ 8.7x ROAS (Local Service)",
+    "it.stats.efficiency": "↓ 73% Ad Waste (Agency Client)",
+    "it.stats.uptime": "100% Uptime · 4.9/5 Support",
+
+    "it.objections.title": "Your Questions, Answered Honestly",
+    "it.objections.tab1.title": "Will AI replace my team?",
+    "it.objections.tab1.content": "No. It frees them. Our system saves 75% of their time on repetitive tasks, so they can focus on strategy, creativity, and high-value customer interactions.",
+    "it.objections.tab2.title": "Is my data safe?",
+    "it.objections.tab2.content": "Absolutely. We use bank-level encryption, perform daily backups, are fully GDPR compliant, and never share your data with third parties. Your customer data is safer than your bank.",
+    "it.objections.tab3.title": "What if it doesn’t work?",
+    "it.objections.tab3.content": "We offer a Full ROI Guarantee. If you don't see measurable results in the first 30 days, you get a full refund. No questions asked. Your success is our success.",
+    "it.objections.tab4.title": "Do I need tech skills?",
+    "it.objections.tab4.content": "Zero. The interface is drag-and-drop simple. Plus, our expert team handles the complete setup for you in under 48 hours. You just watch the results come in.",
+
+    "it.why.title": "Why You’ll Sleep Better at Night",
+    "it.why.subtitle": "A comprehensive solution for peace of mind and sustainable growth.",
+    "it.why.speed.title": "Reclaim Your Evenings",
+    "it.why.speed.desc": "Our automation runs 24/7, capturing leads and nurturing customers while you're offline. Focus on your business, not in it.",
+    "it.why.security.title": "Protect Your Reputation",
+    "it.why.security.desc": "Your customer data is secured with bank-level encryption and daily backups. Never worry about a data breach again.",
+    "it.why.growth.title": "End the Guesswork",
+    "it.why.growth.desc": "Our analytics dashboard shows you exactly what works and what doesn't. Make data-driven decisions and invest your budget with confidence.",
+    "it.why.guarantee": "Built by Farzin Tahayori – 20+ years scaling brands. I stake my name on your success.",
+
+    "it.products.title": "Your Custom Automation Stack",
     "it.products.subtitle": "Comprehensive automation solutions for every stage of the customer journey.",
     "it.prod.acquisition.title": "Customer Acquisition",
     "it.prod.acquisition.desc": "Attract targeted customers automatically with smart campaigns and increase conversion rates by up to 5x.",
@@ -36,36 +47,34 @@
     "it.prod.strategy.badge": "Business Special",
     "it.prod.strategy.title": "Ad Strategy Automation",
     "it.prod.strategy.desc": "Design, execute, and optimize ad strategies with AI for best results. Includes market analysis and budget optimization.",
-    "it.process.title": "How It Works?",
-    "it.process.subtitle": "Only 3 steps to complete business automation.",
-    "it.process.step1.title": "Free Consultation",
-    "it.process.step1.desc": "Our team reviews your business needs and suggests the best solution.",
-    "it.process.step2.title": "Rapid Setup",
-    "it.process.step2.desc": "Your automation system is ready and launched in less than 48 hours.",
-    "it.process.step3.title": "Continuous Growth",
-    "it.process.step3.desc": "See results from day one and achieve sustainable growth with ongoing optimization.",
-    "it.form.title": "Ready for 10x Growth?",
-    "it.form.subtitle": "Get a free consultation now and start your digital transformation journey.",
+    
+    "it.process.title": "Your 3-Step Path to Effortless Growth",
+    "it.process.subtitle": "Launch your automated system in just 48 hours.",
+    "it.process.step1.title": "Free Strategy Call",
+    "it.process.step1.desc": "In a 30-min call, we map your current funnel and identify key automation opportunities. No credit card, no obligation.",
+    "it.process.step2.title": "48-Hour AI Setup",
+    "it.process.step2.desc": "Our team builds and integrates your custom automation system. Zero technical work required from you.",
+    "it.process.step3.title": "Live Results Dashboard",
+    "it.process.step3.desc": "From day one, you get access to a live dashboard to track your leads, sales, and ROI in real-time.",
+    
+    "it.form.title": "Get Your Free Growth Plan",
+    "it.form.subtitle": "No obligation. No sales pitch. Just a clear, actionable plan to 10x your results.",
     "it.form.name": "Full Name",
-    "it.form.phone": "Phone Number",
+    "it.form.phone": "Phone Number (Optional)",
+    "it.form.challenge": "Biggest challenge right now?",
     "it.form.email": "Email Address",
     "it.form.product": "Select Product",
     "it.form.message": "Your Message (Optional)",
-    "it.form.submit": "Get Free Consultation",
-    "it.form.disclaimer": "By submitting this form, you agree to our terms and conditions.",
-    "it.ai.title": "AI & Automation",
-    "it.ai.desc": "We implement intelligent agents and workflow automation to streamline your operations and increase efficiency.",
-    "it.automation.title": "Digital Transformation",
-    "it.automation.desc": "Comprehensive digital solutions including software development to modernize your business infrastructure.",
-    "it.marketing.title": "Digital Marketing",
-    "it.marketing.desc": "Data-driven marketing strategies designed to expand your reach and engage your target audience effectively.",
+    "it.form.submit": "Send Me The Plan",
+    "it.form.disclaimer": "✅ No spam · GDPR Compliant · 500+ happy clients",
+
     "it.lead.sectionTitle": "Meet the Head of IT & AI",
     "it.lead.name": "Farzin Tahayori",
     "it.lead.title": "Strategist, System Builder & Business Growth Consultant",
     "it.lead.website.url": "https://tahayori.com",
     "it.lead.website.text": "tahayori.com",
     "it.lead.summaryTitle": "Professional Summary",
-    "it.lead.summary": "With over 20 years of experience in programming, system design, intelligent automation, and digital marketing, Farzin has a proven track record of collaborating with diverse brands on web design, sales systemization, strategic consulting, and AI automation. He combines analytical thinking, technical creativity, and economic insight to engineer scalable and profitable solutions.",
+    "it.lead.summary": "With over 20 years of experience, Farzin has been the architect behind Bozorgi Group's technology division since 2009. He combines analytical thinking, technical creativity, and economic insight to engineer scalable and profitable solutions for our clients.",
     "it.lead.skillsTitle": "Specialties & Skills",
     "it.lead.skills.group1.title": "Programming & Systems Development",
     "it.lead.skills.group2.title": "Web Design & UI/UX",
