--- a/public/locales/en/testimonials.json
+++ b/public/locales/en/testimonials.json
@@ -14,11 +14,11 @@
     "testimonials.property.role2": "Family Office Manager, London",
     "testimonials.property.quote3": "As an overseas investor, their weekly project reports and meticulous management were invaluable. It was a completely hands-off experience with a fantastic outcome.",
     "testimonials.property.role3": "Tech Entrepreneur, Singapore",
-    "testimonials.it.subtitle": "What successful businesses say about our automation.",
-    "testimonials.it.quote1": "By using this system, our sales tripled and customer follow-up time was reduced to a quarter. Truly amazing!",
-    "testimonials.it.role1": "Reza Mohammadi, Online Store CEO",
-    "testimonials.it.quote2": "The Ad Automation allowed us to manage our budget better and our conversion rate went up 10x. Highly recommended!",
-    "testimonials.it.role2": "Sarah Ahmadi, Marketing Manager",
-    "testimonials.it.quote3": "They have an amazing support team. The system is very user-friendly and needs no technical knowledge. Excellent!",
-    "testimonials.it.role3": "Mahdi Karimi, Startup Owner"
+    "testimonials.it.subtitle": "Proof from business owners who stopped guessing and started growing.",
+    "testimonials.it.quote1": "The sales funnel automation resulted in a 312% increase in online orders within the first month. Our team is now focused on strategy, not manual follow-ups.",
+    "testimonials.it.role1": "Reza M., e-commerce CEO",
+    "testimonials.it.quote2": "We were wasting 70% of our ad budget. Their AI ad optimization gave us an 8.7x ROAS in just three weeks. It's a game-changer.",
+    "testimonials.it.role2": "Sarah A., Marketing Director",
+    "testimonials.it.quote3": "The 48-hour setup was real. We were live and seeing new leads on the dashboard by day two. The best part? I didn't need to touch a line of code.",
+    "testimonials.it.role3": "Mahdi K., Startup Founder"
 }
