--- a/public/locales/es/it.json
+++ b/public/locales/es/it.json
@@ -1,25 +1,36 @@
 {
-    "hero.it.subtitle": "Sistemas de Automatización Inteligente para multiplicar por 10 el éxito de su publicidad.",
-    "it.title": "Sistema de Automatización Inteligente",
-    "it.subtitle": "Automatice el viaje de su cliente y venda de forma inteligente.",
-    "it.hero.badge": "Inicio Gratuito Disponible",
-    "it.hero.cta": "Ver Productos",
-    "it.features.noTech": "Sin conocimientos técnicos",
-    "it.features.support": "Soporte 24/7",
-    "it.features.roi": "Garantía de ROI",
-    "it.stats.success": "Éxito Publicitario",
-    "it.stats.sales": "Aumento de Ventas",
-    "it.stats.efficiency": "Eficiencia del Sistema",
-    "it.stats.uptime": "Automatización Total",
-    "it.why.title": "¿Por qué elegir nuestro sistema?",
-    "it.why.subtitle": "Una solución integral para aumentar la eficiencia y el crecimiento sostenible.",
-    "it.why.speed.title": "Alta Velocidad",
-    "it.why.speed.desc": "Automatización completa de procesos, ahorrando un 75% de tiempo y aumentando la velocidad de respuesta al cliente.",
-    "it.why.security.title": "Seguridad Total",
-    "it.why.security.desc": "Protección de datos con los más altos estándares de seguridad, cifrado avanzado y copias de seguridad continuas.",
-    "it.why.growth.title": "Crecimiento Medible",
-    "it.why.growth.desc": "Informes detallados y análisis de datos para una mejor toma de decisiones y un crecimiento continuo.",
-    "it.products.title": "Productos y Servicios",
+    "it.title": "Automatice el Marketing. Conserve a su Equipo.",
+    "it.subtitle": "Sin código. Configuración en 48 horas. ROI garantizado o le devolvemos su dinero.",
+    "it.hero.badge": "Sin Pérdida de Empleos. Solo Resultados 10x.",
+    "it.hero.cta": "Obtener Llamada de Estrategia Gratuita",
+    "it.hero.cta_secondary": "Ver Resultados Reales",
+    "it.hero.trustline": "Utilizado por más de 500 pymes · Cumple con GDPR · Soporte Humano 24/7",
+    "it.stats.success": "↑ 312% en Ventas (eCom, Italia)",
+    "it.stats.sales": "↑ 8.7x ROAS (Servicio Local)",
+    "it.stats.efficiency": "↓ 73% en Desperdicio Publicitario (Cliente de Agencia)",
+    "it.stats.uptime": "100% de Actividad · Soporte 4.9/5",
+
+    "it.objections.title": "Sus Preguntas, Respondidas con Honestidad",
+    "it.objections.tab1.title": "¿La IA reemplazará a mi equipo?",
+    "it.objections.tab1.content": "No. Los libera. Nuestro sistema ahorra el 75% de su tiempo en tareas repetitivas, para que puedan centrarse en la estrategia, la creatividad y las interacciones de alto valor con los clientes.",
+    "it.objections.tab2.title": "¿Están seguros mis datos?",
+    "it.objections.tab2.content": "Absolutamente. Usamos encriptación a nivel bancario, realizamos copias de seguridad diarias, cumplimos totalmente con el GDPR y nunca compartimos sus datos con terceros.",
+    "it.objections.tab3.title": "¿Y si no funciona?",
+    "it.objections.tab3.content": "Ofrecemos una Garantía de ROI Completa. Si no ve resultados medibles en los primeros 30 días, obtiene un reembolso completo. Sin preguntas. Su éxito es nuestro éxito.",
+    "it.objections.tab4.title": "¿Necesito conocimientos técnicos?",
+    "it.objections.tab4.content": "Cero. La interfaz es simple de arrastrar y soltar. Además, nuestro equipo de expertos se encarga de la configuración completa por usted en menos de 48 horas.",
+
+    "it.why.title": "Por Qué Dormirá Mejor por la Noche",
+    "it.why.subtitle": "Una solución integral para su tranquilidad y crecimiento sostenible.",
+    "it.why.speed.title": "Recupere Sus Tardes",
+    "it.why.speed.desc": "Nuestra automatización funciona 24/7, capturando clientes potenciales y nutriéndolos mientras usted no está. Concéntrese en su negocio, no dentro de él.",
+    "it.why.security.title": "Proteja Su Reputación",
+    "it.why.security.desc": "Los datos de sus clientes están protegidos con encriptación a nivel bancario y copias de seguridad diarias. No vuelva a preocuparse por una violación de datos.",
+    "it.why.growth.title": "Acabe con las Conjeturas",
+    "it.why.growth.desc": "Nuestro panel de análisis le muestra exactamente qué funciona y qué no. Tome decisiones basadas en datos e invierta su presupuesto con confianza.",
+    "it.why.guarantee": "Creado por Farzin Tahayori: más de 20 años escalando marcas. Respaldo su éxito con mi nombre.",
+
+    "it.products.title": "Su Pila de Automatización Personalizada",
     "it.products.subtitle": "Soluciones de automatización integrales para cada etapa del viaje del cliente.",
     "it.prod.acquisition.title": "Automatización de Captación",
     "it.prod.acquisition.desc": "Atraiga clientes potenciales automáticamente con campañas inteligentes y aumente la tasa de conversión hasta 5 veces.",
@@ -36,36 +47,34 @@
     "it.prod.strategy.badge": "Especial para Empresas",
     "it.prod.strategy.title": "Estrategia Publicitaria",
     "it.prod.strategy.desc": "Diseñe, ejecute y optimice estrategias publicitarias con IA para obtener los mejores resultados. Incluye análisis de mercado.",
-    "it.process.title": "¿Cómo funciona?",
-    "it.process.subtitle": "Solo 3 pasos para completar la automatización de su negocio.",
-    "it.process.step1.title": "Consulta Gratuita",
-    "it.process.step1.desc": "Nuestro equipo revisa las necesidades de su negocio y sugiere la mejor solución.",
-    "it.process.step2.title": "Configuración Rápida",
-    "it.process.step2.desc": "Su sistema de automatización está listo y lanzado en menos de 48 horas.",
-    "it.process.step3.title": "Crecimiento Continuo",
-    "it.process.step3.desc": "Vea resultados desde el primer día y logre un crecimiento sostenible con optimización continua.",
-    "it.form.title": "¿Listo para un crecimiento x10?",
-    "it.form.subtitle": "Obtenga una consulta gratuita ahora e inicie su viaje de transformación digital.",
+    
+    "it.process.title": "Su Camino de 3 Pasos hacia el Crecimiento sin Esfuerzo",
+    "it.process.subtitle": "Lance su sistema automatizado en solo 48 horas.",
+    "it.process.step1.title": "Llamada de Estrategia Gratuita",
+    "it.process.step1.desc": "En una llamada de 30 minutos, mapeamos su embudo actual e identificamos oportunidades clave de automatización. Sin tarjeta de crédito, sin compromiso.",
+    "it.process.step2.title": "Configuración de IA en 48 Horas",
+    "it.process.step2.desc": "Nuestro equipo construye e integra su sistema de automatización personalizado. No se requiere trabajo técnico de su parte.",
+    "it.process.step3.title": "Panel de Resultados en Vivo",
+    "it.process.step3.desc": "Desde el primer día, obtiene acceso a un panel en vivo para rastrear sus clientes potenciales, ventas y ROI en tiempo real.",
+    
+    "it.form.title": "Obtenga su Plan de Crecimiento Gratuito",
+    "it.form.subtitle": "Sin compromiso. Sin discursos de venta. Solo un plan claro y accionable para multiplicar por 10 sus resultados.",
     "it.form.name": "Nombre Completo",
-    "it.form.phone": "Número de Teléfono",
+    "it.form.phone": "Número de Teléfono (Opcional)",
+    "it.form.challenge": "¿Su mayor desafío en este momento?",
     "it.form.email": "Correo Electrónico",
     "it.form.product": "Seleccionar Producto",
     "it.form.message": "Su Mensaje (Opcional)",
-    "it.form.submit": "Obtener Consulta Gratuita",
-    "it.form.disclaimer": "Al enviar este formulario, acepta nuestros términos y condiciones.",
-    "it.ai.title": "IA y Automatización",
-    "it.ai.desc": "Implementamos agentes inteligentes y automatización de flujos de trabajo para agilizar sus operaciones y aumentar la eficiencia.",
-    "it.automation.title": "Transformación Digital",
-    "it.automation.desc": "Soluciones digitales integrales, incluido el desarrollo de software, para modernizar su infraestructura empresarial.",
-    "it.marketing.title": "Marketing Digital",
-    "it.marketing.desc": "Estrategias de marketing basadas en datos diseñadas para ampliar su alcance e involucrar a su público objetivo de manera efectiva.",
+    "it.form.submit": "Envíenme el Plan",
+    "it.form.disclaimer": "✅ Sin spam · Cumple con GDPR · Más de 500 clientes satisfechos",
+
     "it.lead.sectionTitle": "Conozca al Director de TI e IA",
     "it.lead.name": "Farzin Tahayori",
     "it.lead.title": "Estratega, Creador de Sistemas y Consultor de Crecimiento Empresarial",
     "it.lead.website.url": "https://tahayori.com",
     "it.lead.website.text": "tahayori.com",
     "it.lead.summaryTitle": "Resumen Profesional",
-    "it.lead.summary": "Con más de 20 años de experiencia en programación, diseño de sistemas, automatización inteligente y marketing digital, Farzin tiene un historial probado de colaboración con diversas marcas en diseño web, sistematización de ventas, consultoría estratégica y automatización de IA. Combina el pensamiento analítico, la creatividad técnica y la visión económica para diseñar soluciones escalables y rentables.",
+    "it.lead.summary": "Con más de 20 años de experiencia, Farzin ha sido el arquitecto detrás de la división de tecnología de Bozorgi Group desde 2009. Combina el pensamiento analítico, la creatividad técnica y la visión económica para diseñar soluciones escalables y rentables para nuestros clientes.",
     "it.lead.skillsTitle": "Especialidades y Habilidades",
     "it.lead.skills.group1.title": "Programación y Desarrollo de Sistemas",
     "it.lead.skills.group2.title": "Diseño Web y UI/UX",
