--- a/public/locales/es/testimonials.json
+++ b/public/locales/es/testimonials.json
@@ -14,11 +14,11 @@
     "testimonials.property.role2": "Gerente de Family Office, Londres",
     "testimonials.property.quote3": "Como inversor extranjero, sus informes semanales del proyecto y su gestión meticulosa fueron invaluables. Fue una experiencia completamente delegada con un resultado fantástico.",
     "testimonials.property.role3": "Emprendedor Tecnológico, Singapur",
-    "testimonials.it.subtitle": "Lo que dicen los negocios exitosos sobre nuestra automatización.",
-    "testimonials.it.quote1": "Al usar este sistema, nuestras ventas se triplicaron y el tiempo de seguimiento de clientes se redujo a una cuarta parte. ¡Verdaderamente increíble!",
-    "testimonials.it.role1": "Reza Mohammadi, CEO de Tienda Online",
-    "testimonials.it.quote2": "La automatización de anuncios nos permitió administrar mejor nuestro presupuesto y nuestra tasa de conversión aumentó 10 veces. ¡Muy recomendado!",
-    "testimonials.it.role2": "Sarah Ahmadi, Gerente de Marketing",
-    "testimonials.it.quote3": "Tienen un equipo de soporte increíble. El sistema es muy fácil de usar y no necesita conocimientos técnicos. ¡Excelente!",
-    "testimonials.it.role3": "Mahdi Karimi, Propietario de Startup"
+    "testimonials.it.subtitle": "Pruebas de dueños de negocios que dejaron de adivinar y comenzaron a crecer.",
+    "testimonials.it.quote1": "La automatización del embudo de ventas resultó en un aumento del 312% en los pedidos en línea durante el primer mes. Nuestro equipo ahora se centra en la estrategia, no en seguimientos manuales.",
+    "testimonials.it.role1": "Reza M., CEO de comercio electrónico",
+    "testimonials.it.quote2": "Estábamos desperdiciando el 70% de nuestro presupuesto publicitario. Su optimización de anuncios con IA nos dio un ROAS de 8.7x en solo tres semanas. Es un cambio radical.",
+    "testimonials.it.role2": "Sarah A., Directora de Marketing",
+    "testimonials.it.quote3": "La configuración en 48 horas fue real. Estábamos en vivo y viendo nuevos clientes potenciales en el tablero para el segundo día. ¿La mejor parte? No tuve que tocar una línea de código.",
+    "testimonials.it.role3": "Mahdi K., Fundador de Startup"
 }
